--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 a {
-    text-decoration:  green wavy underline;
+    text-decoration: none;
     color: #999;
 }
 a:hover {
