--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ ul.posts li {
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title> jhon paulino, </title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
